[gd_scene load_steps=8 format=2]

[ext_resource path="res://leticia_npc_definitivo.png" type="Texture" id=1]
[ext_resource path="res://cenário_letícia.png" type="Texture" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://Dialogo.gd" type="Script" id=4]
[ext_resource path="res://caixa_texto_g_720.png" type="Texture" id=5]
[ext_resource path="res://barrahumor_720.png" type="Texture" id=6]
[ext_resource path="res://Rectangle 1Alternativas.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]

[node name="CenárioLetícia" type="Sprite" parent="."]
position = Vector2( 1250.39, 451.5 )
scale = Vector2( 1.00333, 1.00333 )
texture = ExtResource( 2 )

[node name="1" type="Position2D" parent="."]
position = Vector2( 431, 505 )

[node name="Dialogo" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 75.0
margin_bottom = 23.0
script = ExtResource( 3 )

[node name="Leticia" type="Sprite" parent="Control"]
position = Vector2( 406.5, 539.5 )
scale = Vector2( 0.922222, 0.918824 )
texture = ExtResource( 1 )

[node name="ColorHumor" type="ColorRect" parent="Control"]
margin_left = 165.0
margin_top = 590.0
margin_right = 226.0
margin_bottom = 940.0
rect_rotation = 180.0
color = Color( 0.415686, 0.65098, 0.498039, 1 )

[node name="Barrahumor" type="Sprite" parent="Control/ColorHumor"]
position = Vector2( 29.9999, 136 )
rotation = 3.14159
scale = Vector2( 0.656977, 0.656977 )
texture = ExtResource( 6 )

[node name="Alternativas" type="Sprite" parent="Control"]
position = Vector2( 1250, 1036.5 )
scale = Vector2( 1.30208, 1.22477 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Control/Alternativas"]
visible = false
anchor_left = -0.256
anchor_right = 1.001
margin_left = -468.48
margin_top = -109.0
margin_right = -2881.92
margin_bottom = -104.0
rect_pivot_offset = Vector2( 960, 2.4494 )
color = Color( 0.415686, 0.65098, 0.498039, 1 )

[node name="Timer" type="Timer" parent="Control/Alternativas/ColorRect"]
wait_time = 0.05

[node name="Btn_A" type="Button" parent="Control/Alternativas"]
visible = false
margin_left = -795.648
margin_top = -60.0112
margin_right = -527.648
margin_bottom = -29.0112
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 228.536, 37.603 )
text = "B"
align = 0

[node name="Btn_B" type="Button" parent="Control/Alternativas"]
visible = false
margin_left = -795.648
margin_top = 3.67413
margin_right = -527.648
margin_bottom = 34.6741
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 228.536, 37.603 )
text = "B"
align = 0

[node name="Btn_C" type="Button" parent="Control/Alternativas"]
visible = false
margin_left = -794.88
margin_top = 68.176
margin_right = -526.88
margin_bottom = 99.176
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 228.536, 37.603 )
text = "B"
align = 0

[node name="TextBox" type="Sprite" parent="Control"]
position = Vector2( 961.027, 336 )
scale = Vector2( 1.31008, 1.13754 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/TextBox"]
margin_left = -259.723
margin_top = -114.941
margin_right = -215.723
margin_bottom = -95.941
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.34902, 0.266667, 0.266667, 1 )
text = "Name"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Control/TextBox"]

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBox"]
margin_left = -260.211
margin_top = -72.0854
margin_right = 24.7894
margin_bottom = 15.9146
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[connection signal="timeout" from="Control/Alternativas/ColorRect/Timer" to="Control" method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/Alternativas/Btn_A" to="Control" method="_on_Btn_A_pressed"]
