[gd_scene load_steps=6 format=2]

[ext_resource path="res://leticia_npc_definitivo.png" type="Texture" id=1]
[ext_resource path="res://cenário_letícia.png" type="Texture" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://Dialogo.gd" type="Script" id=4]
[ext_resource path="res://caixa_texto_g_720.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]

[node name="CenárioLetícia" type="Sprite" parent="."]
position = Vector2( 1250.39, 451.5 )
scale = Vector2( 1.00333, 1.00333 )
texture = ExtResource( 2 )

[node name="1" type="Position2D" parent="."]
position = Vector2( 431, 505 )

[node name="Dialogo" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="TextBox" type="Sprite" parent="Control"]
position = Vector2( 1020, 257 )
scale = Vector2( 1.13754, 1.13754 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/TextBox"]
margin_left = -259.723
margin_top = -114.941
margin_right = -215.723
margin_bottom = -95.941
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.34902, 0.266667, 0.266667, 1 )
text = "Name"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Control/TextBox"]
playback_speed = 1.5
playback/speed = 1.5

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBox"]
margin_left = -260.211
margin_top = -72.0854
margin_right = 24.7894
margin_bottom = 15.9146
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Pngegg" type="Sprite" parent="Control"]
position = Vector2( 431, 505 )
texture = ExtResource( 1 )

[connection signal="tween_completed" from="Control/TextBox/Tween" to="Control" method="_on_Tween_tween_completed"]
